[package]
name = "frs"
version = "0.4.1"
authors = ["ZSchoen <dev@zschoen.dev>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://zschoen.dev/projects/frs"
repository = "https://github.com/TheAlgorythm/frs"
documentation = "https://docs.rs/crate/frs"
description = "Rename files with RegEx patterns"
keywords = ["rename", "find", "regex", "rename-files", "rename-directories"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
futures = "~0.3"
futures-core = "~0.3"
pin-project-lite = "~0.2"
async-std = { version = "~1.9", features = ["attributes"] }
regex = "~1.5"
structopt = "~0.3"
colored = "~2.0"
cli-table = { version = "~0.4", default-features = false }
human_format = "~1.0"
thiserror = "~1.0"
bool_ext = "~0.5"
terminal_size = "~0.1"

[dev-dependencies]
matches = "~0.1"
maplit = "~1.0"

